<resources>
    <string name="app_name">Filmoteca</string>
    <string name="movie_image_description">Movie image</string>
    <string name="tv_show_image">TV show image</string>
    <string name="search_btn_settings_description">Search button settings</string>
    <string name="search_edit_text_hint">Movie, series</string>
    <string name="favorites">Favorites</string>
    <string name="all">All</string>
    <string name="movies">Movies</string>
    <string name="tvShows">Series</string>
    <string name="filmography">Filmography</string>
    <string name="awards">Awards</string>
    <string name="crew">Crew</string>
    <string name="filmMakers">Filmmakers</string>
    <string name="director">Director</string>
    <string name="screenPlay">Screenplay</string>
    <string name="producer">Producers</string>
    <string name="starring">Starring</string>
    <string name="related">Related</string>
    <string name="affiche">Affiche</string>
    <string name="nowInTheatres">Now in theatres</string>
    <string name="comingSoon">Coming soon</string>
    <string name="movieOfTheWeek">Movie of the week</string>
    <string name="seriesPremier">Series premier</string>
    <string name="searchHint">Movies, series, actors</string>
    <string name="searchByParameters">Search by parameters</string>
    <string name="year">Year</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="imdb">IMDb</string>
    <string name="show">show</string>
    <string name="top">Top best movies and TV shows</string>
    <string name="home">home</string>
    <string name="list">list</string>
    <string name="search">search</string>
    <string name="heart">heart</string>
    <string name="settings">settings</string>
    <string name="reset">Reset</string>
    <string name="min"> min</string>
    <string name="retry">Retry</string>
    <string name="add_to_list">Add to\nwaiting list</string>
    <string name="watch_trailer">Watch\ntrailer</string>
    <string name="add_to_favorite">Add\nto favorites</string>
    <string name="added_to_list">Added to\nwaiting list</string>
    <string name="added_to_favorite">Added\nto favorites</string>
</resources>
