<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/year_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/IconSecondary" />

            <LinearLayout
                android:id="@+id/year_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headline2"
                    android:layout_width="96dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/year" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="10"
                    android:background="@null" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/country_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/year_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/IconSecondary" />

            <LinearLayout
                android:id="@+id/country_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headline2"
                    android:layout_width="96dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/country" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="10"
                    android:background="@null" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/genre_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/country_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/IconSecondary" />

            <LinearLayout
                android:id="@+id/genre_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="1dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headline2"
                    android:layout_width="96dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/genre" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="10"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/IconSecondary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/genre_card">

        <LinearLayout
            android:id="@+id/rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/IconSecondary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/Headline2"
                    android:layout_width="96dp"
                    android:layout_height="18dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:gravity="bottom|start"
                    android:text="@string/rating" />

                <TextView
                    style="@style/Headline2"
                    android:layout_width="96dp"
                    android:layout_height="18dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="bottom|end"
                    android:text="@string/imdb" />
            </LinearLayout>

            <SeekBar
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="13dp"
                android:max="10"
                android:progressBackgroundTint="@color/IconSecondary"
                android:progressTint="@color/colorAccent"
                tools:ignore="UnusedAttribute" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/IconSecondary" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="22dp"
        android:text="@string/show"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>