<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="movieOfTheWeek"
            type="com.geekbrains.team.filmlibrary.model.MovieView" />

        <variable
            name="tvShowPremier"
            type="com.geekbrains.team.filmlibrary.model.TVShowView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/topPager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/indicator"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:gravity="center_horizontal"
                    app:layout_constraintEnd_toEndOf="@id/topPager"
                    app:layout_constraintStart_toStartOf="@id/topPager"
                    app:layout_constraintTop_toBottomOf="@id/topPager" />

                <TextView
                    android:id="@+id/afisha_tv"
                    style="@style/Headline1"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_margin="15dp"
                    android:gravity="bottom"
                    android:text="@string/affiche"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/indicator" />

                <TextView
                    android:id="@+id/today_tv"
                    style="@style/Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/nowInTheatres"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/afisha_tv" />

                <ImageButton
                    android:id="@+id/today_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="@id/today_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/today_tv"
                    tools:ignore="ContentDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/today_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintTop_toBottomOf="@id/today_tv" />

                <TextView
                    android:id="@+id/soon_tv"
                    style="@style/Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/comingSoon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/today_recycler" />

                <ImageButton
                    android:id="@+id/soon_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_chevron_right"
                    app:layout_constraintBottom_toBottomOf="@id/soon_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/soon_tv"
                    tools:ignore="ContentDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/soon_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintTop_toBottomOf="@id/soon_tv" />

                <TextView
                    android:id="@+id/film_of_week_tv"
                    style="@style/Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="24dp"
                    android:gravity="bottom"
                    android:text="@string/movieOfTheWeek"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/soon_recycler" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/film_of_week_card"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    app:layout_constraintTop_toBottomOf="@id/film_of_week_tv">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/film_of_week_title_iv"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:backdrop="@{movieOfTheWeek.backdropPath}"
                            tools:ignore="ContentDescription" />

                        <ImageButton
                            android:id="@+id/film_of_week_like_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:background="@android:color/transparent"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_favorite_unactive"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <ImageButton
                            android:id="@+id/film_of_week_play_btn"
                            android:layout_width="33dp"
                            android:layout_height="33dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_play_circle"
                            app:layout_constraintBottom_toBottomOf="@id/film_of_week_title_iv"
                            app:layout_constraintEnd_toEndOf="@id/film_of_week_title_iv"
                            app:layout_constraintStart_toStartOf="@id/film_of_week_title_iv"
                            app:layout_constraintTop_toTopOf="@id/film_of_week_title_iv"
                            android:visibility="@{TextUtils.isEmpty(movieOfTheWeek.trailer) ? View.GONE : View.VISIBLE}"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:id="@+id/film_of_week_cover_iv"
                            android:layout_width="80dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginBottom="29dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:poster="@{movieOfTheWeek.posterPath}"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/film_of_week_title_tv"
                            style="@style/Headline2"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="bottom"
                            android:text="@{movieOfTheWeek.title}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/film_of_week_cover_iv"
                            app:layout_constraintTop_toBottomOf="@id/film_of_week_title_iv" />

                        <TextView
                            android:id="@+id/film_of_week_original_title_tv"
                            style="@style/Subtitle2"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:text="@{movieOfTheWeek.originalTitle}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/film_of_week_cover_iv"
                            app:layout_constraintTop_toBottomOf="@id/film_of_week_title_tv" />

                        <TextView
                            android:id="@+id/film_of_week_rating_tv"
                            style="@style/Subtitle1"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@{movieOfTheWeek.voteAverage}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="28dp"
                            android:layout_marginBottom="9dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_imdb"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="ContentDescription" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/series_tv"
                    style="@style/Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="24dp"
                    android:gravity="bottom"
                    android:text="@string/seriesPremier"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/film_of_week_card" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/series_card"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="32dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/series_tv">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/series_title_iv"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:poster="@{tvShowPremier.posterPath}"
                            tools:ignore="ContentDescription" />

                        <ImageButton
                            android:id="@+id/series_like_btn"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginTop="4dp"
                            android:layout_marginEnd="4dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_favorite_unactive"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="ContentDescription" />

                        <ImageButton
                            android:id="@+id/series_play_btn"
                            android:layout_width="33dp"
                            android:layout_height="33dp"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_play_circle"
                            app:layout_constraintBottom_toBottomOf="@id/series_title_iv"
                            app:layout_constraintEnd_toEndOf="@id/series_title_iv"
                            app:layout_constraintStart_toStartOf="@id/series_title_iv"
                            app:layout_constraintTop_toTopOf="@id/series_title_iv"
                            android:visibility="@{TextUtils.isEmpty(tvShowPremier.trailer) ? View.GONE : View.VISIBLE}"
                            tools:ignore="ContentDescription" />

                        <ImageView
                            android:id="@+id/series_cover_iv"
                            android:layout_width="80dp"
                            android:layout_height="120dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginBottom="29dp"
                            android:scaleType="centerCrop"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:poster="@{tvShowPremier.posterPath}"
                            tools:ignore="ContentDescription" />

                        <TextView
                            android:id="@+id/series_title_tv"
                            style="@style/Headline2"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="18dp"
                            android:layout_marginBottom="38dp"
                            android:gravity="bottom"
                            android:text="@{tvShowPremier.name}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <TextView
                            android:id="@+id/series_original_title_tv"
                            style="@style/Subtitle2"
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="18dp"
                            android:layout_marginBottom="22dp"
                            android:text="@{tvShowPremier.originalName}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <TextView
                            android:id="@+id/series_rating_tv"
                            style="@style/Subtitle1"
                            android:layout_width="20dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:gravity="center"
                            android:text="@{tvShowPremier.voteAverage}"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="14dp"
                            android:layout_marginEnd="28dp"
                            android:layout_marginBottom="9dp"
                            android:adjustViewBounds="true"
                            android:src="@drawable/ic_imdb"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:ignore="ContentDescription" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>